[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Lobster_1.3.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -75.0
margin_right = 232.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Press Start button when you're ready"
align = 1
autowrap = true

[node name="Start" type="Button" parent="."]
anchor_left = 0.435
anchor_top = 0.732
anchor_right = 0.58
anchor_bottom = 0.842
margin_left = 12.56
margin_top = -0.200043
margin_right = 0.0799561
margin_bottom = -0.200043
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1030.0
margin_bottom = 65.0
custom_constants/separation = 670

[node name="LivesContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 157.0
margin_bottom = 60.0
custom_constants/separation = 15

[node name="LivesLabel" type="Label" parent="HBoxContainer/LivesContainer"]
margin_right = 109.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Lives"

[node name="LivesValue" type="Label" parent="HBoxContainer/LivesContainer"]
margin_left = 124.0
margin_right = 157.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="SocreContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 827.0
margin_right = 1001.0
margin_bottom = 60.0
custom_constants/separation = 15

[node name="ScoreLabel" type="Label" parent="HBoxContainer/SocreContainer"]
margin_right = 126.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1

[node name="ScoreValue" type="Label" parent="HBoxContainer/SocreContainer"]
margin_left = 141.0
margin_right = 174.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
